--- a/css/header-css/style.sass
+++ b/css/header-css/style.sass
@@ -86,7 +86,7 @@
 				&:hover
 					transform: translateY(-5px)
 
-// .hero__layer-outer,
+.hero__layer-outer,
 .hero__layer-inner	
 	position: absolute
 	top: 0
@@ -101,6 +101,7 @@
 .hero__layer-outer
 	overflow: hidden
 	transition: all .7s ease-in-out
+	background-position: center
 	@include bg-gradient(#353795, #144F96)
 	color: $bg-font-color
 	.hero__intro-text
