--- a/css/about-section-css/style.sass
+++ b/css/about-section-css/style.sass
@@ -99,8 +99,8 @@
 		display: none
 
 @media only screen and (max-width: 600px)
-	.about__interactive-box
-		padding: 100px 50px
+	// .about__interactive-box
+	// 	padding: 100px 50px
 
 @media only screen and (max-width: 500px)
 	#experience
