--- a/css/skills-section-css/style.sass
+++ b/css/skills-section-css/style.sass
@@ -53,21 +53,19 @@
 	.bg-img__container-avatar
 		position: absolute
 		top: 50%
-		left: 140%
+		left: 50%
 		transform: translate(-50%, -50%)
+		z-index: 9
 		width: 300px
 		height: 300px
-		background: #1d4996
-		border-radius: 50%
-		-webkit-box-shadow: 10px 0px 20px -8px rgba(19,49,131,1)
-		-moz-box-shadow: 10px 0px 20px -8px rgba(19,49,131,1)
-		box-shadow: 10px 0px 20px -8px rgba(19,49,131,1)
+		-webkit-box-shadow: 0px 10px 27px -5px rgba(0,0,0,0.75);
+		-moz-box-shadow: 0px 10px 27px -5px rgba(0,0,0,0.75);
+		box-shadow: 0px 10px 27px -5px rgba(0,0,0,0.75);
 		img
 			overflow: hidden
 			width: 100%
 			height: 100%
-			border-radius: 50%
-			border: 20px solid #1c4996
+			border: 5px solid $bg-font-color
 
 .skill
 	@include bg-gradient(#353795, #144F96)
@@ -145,10 +143,11 @@
 		&::after
 			width: 100%
 		.bg-img__container-avatar
+			order: 3
 			position: relative
-			top: auto
-			left: 50%
-			transform: translate(-50%)
+			top: 25px
+			left: 0
+			transform: translate(0)
 
 	.skill
 		.hover,
