--- a/css/skills-section-css/style.sass
+++ b/css/skills-section-css/style.sass
@@ -24,7 +24,7 @@
 	.bg-img__container-inner
 		position: relative
 		z-index: 9
-		width: 35%
+		width: 30%
 
 #contact
 	.bg-img__container
@@ -58,9 +58,9 @@
 		z-index: 9
 		width: 300px
 		height: 300px
-		-webkit-box-shadow: 0px 10px 27px -5px rgba(0,0,0,0.75);
-		-moz-box-shadow: 0px 10px 27px -5px rgba(0,0,0,0.75);
-		box-shadow: 0px 10px 27px -5px rgba(0,0,0,0.75);
+		-webkit-box-shadow: 0px 10px 27px -5px rgba(0,0,0,0.75)
+		-moz-box-shadow: 0px 10px 27px -5px rgba(0,0,0,0.75)
+		box-shadow: 0px 10px 27px -5px rgba(0,0,0,0.75)
 		img
 			overflow: hidden
 			width: 100%
