--- a/css/about-section-css/style.sass
+++ b/css/about-section-css/style.sass
@@ -109,7 +109,7 @@
 	.interactive-box__inner-top
 		flex-direction: column
 	.about__interactive-box
-		padding: 50px
+		padding: 50px 50px 0 50px
 		.interactive-box__tile
 			margin: 20px
 	.about__txt-inner
