--- a/css/about-section-css/style.css
+++ b/css/about-section-css/style.css
@@ -104,7 +104,7 @@
     flex-direction: column; }
 
   .about__interactive-box {
-    padding: 50px; }
+    padding: 50px 50px 0 50px; }
     .about__interactive-box .interactive-box__tile {
       margin: 20px; }
 
