--- a/css/about-section-css/style.sass
+++ b/css/about-section-css/style.sass
@@ -70,7 +70,7 @@
 	.about__interactive-box
 		background: #274195
 		min-height: 400px
-		padding: 25px
+		padding: 100px 25px
 		color: $bg-font-color
 		-webkit-box-shadow: -15px 15px 50px -10px #1a356b
 		-moz-box-shadow: -15px 15px 50px -10px #1a356b
@@ -81,9 +81,6 @@
 @media only screen and (max-width: 980px)
 	.about__container
 		flex-direction: column
-	#experience
-		.about__txt
-			margin-bottom: 100px
 	.about__txt-inner
 		width: 100%
 	.about__interactive-box
@@ -97,10 +94,6 @@
 				transform: rotateX(0deg) translateY(0px)
 	.hide-mobile
 		display: none
-
-@media only screen and (max-width: 600px)
-	// .about__interactive-box
-	// 	padding: 100px 50px
 
 @media only screen and (max-width: 500px)
 	#experience
