--- a/css/skills-section-css/style.css
+++ b/css/skills-section-css/style.css
@@ -165,10 +165,11 @@
   .skill img {
     transform: scale(2.5); } }
 @media only screen and (max-width: 500px) {
-  .bg-img__container {
-    padding: 100px 50px; }
-
   .skill {
-    min-width: 225px; } }
+    min-width: 225px; }
+
+  #contact .bg-img__container-avatar {
+    width: 200px;
+    height: 200px; } }
 
 /*# sourceMappingURL=style.css.map */
