--- a/css/skills-section-css/style.sass
+++ b/css/skills-section-css/style.sass
@@ -160,7 +160,8 @@
 			transform: scale(2.5)
 
 @media only screen and (max-width: 500px)
-	.bg-img__container
-		padding: 100px 50px
 	.skill 
 		min-width: 225px
+	#contact .bg-img__container-avatar
+		width: 200px
+		height: 200px
