--- a/css/about-section-css/style.sass
+++ b/css/about-section-css/style.sass
@@ -101,9 +101,10 @@
 			min-height: 100%//787px
 	.interactive-box__inner-top
 		flex-direction: column
-	.about__interactive-box
-		padding: 50px 50px 0 50px
+	// .about__interactive-box
+	// 	padding: 100px 50px 0 50px
 		.interactive-box__tile
 			margin: 20px
 	.about__txt-inner
 		padding: 100px 50px
+
