--- a/css/header-css/style.css
+++ b/css/header-css/style.css
@@ -144,6 +144,6 @@
     opacity: 1; } }
 @media only screen and (max-width: 600px) {
   .hero__intro-text {
-    padding: 50px; } }
+    padding: 50px 20px; } }
 
 /*# sourceMappingURL=style.css.map */
