--- a/css/skills-section-css/style.sass
+++ b/css/skills-section-css/style.sass
@@ -159,6 +159,10 @@
 		img
 			transform: scale(2.5)
 
+@media only screen and (max-width: 600px)
+	#skills
+		padding: 100px 50px
+
 @media only screen and (max-width: 500px)
 	.skill 
 		min-width: 225px
