--- a/css/skills-section-css/style.css
+++ b/css/skills-section-css/style.css
@@ -3,8 +3,7 @@
   padding: 100px 50px 135px; }
   #skills .section__heading {
     left: 50%;
-    transform: translateX(-50%);
-    width: 240px; }
+    transform: translateX(-50%); }
     #skills .section__heading h2 {
       color: #1d4996; }
 
