--- a/css/header-css/style.css
+++ b/css/header-css/style.css
@@ -62,6 +62,7 @@
   right: -4000px;
   width: 100%;
   height: 100vh;
+  min-height: 300px;
   margin: 0 auto;
   background: rgba(0, 32, 105, 0.95);
   z-index: 10;
