--- a/css/header-css/style.sass
+++ b/css/header-css/style.sass
@@ -64,6 +64,7 @@
 	right: -4000px
 	width: 100%
 	height: 100vh
+	min-height: 300px
 	margin: 0 auto
 	background: $hero-menu-continer-color
 	z-index: 10
