--- a/css/skills-section-css/style.css
+++ b/css/skills-section-css/style.css
@@ -64,6 +64,13 @@
     z-index: 9;
     width: 300px;
     height: 300px;
+    background: #353795;
+    background: -moz-linear-gradient(left, #353795 0%, #144F96 100%);
+    background: -webkit-linear-gradient(left, #353795 0%, #144F96 100%);
+    background: -o-linear-gradient(left, #353795 0%, #144F96 100%);
+    background: -ms-linear-gradient(left, #353795 0%, #144F96 100%);
+    background: linear-gradient(to right, #353795 0%, #144F96 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=0 );
     -webkit-box-shadow: 0px 10px 27px -5px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 0px 10px 27px -5px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 10px 27px -5px rgba(0, 0, 0, 0.75); }
