--- a/css/skills-section-css/style.sass
+++ b/css/skills-section-css/style.sass
@@ -57,6 +57,7 @@
 		z-index: 9
 		width: 300px
 		height: 300px
+		@include bg-gradient(#353795, #144F96)
 		-webkit-box-shadow: 0px 10px 27px -5px rgba(0,0,0,0.75)
 		-moz-box-shadow: 0px 10px 27px -5px rgba(0,0,0,0.75)
 		box-shadow: 0px 10px 27px -5px rgba(0,0,0,0.75)
