--- a/css/skills-section-css/style.css
+++ b/css/skills-section-css/style.css
@@ -31,7 +31,7 @@
 
 #contact {
   min-height: auto;
-  background: url("../../img/cracow.jpg") no-repeat 300px/cover; }
+  background: url("../../img/hire-me.jpg") no-repeat 300px/cover; }
   #contact::before {
     position: absolute;
     content: "";
