--- a/css/header-css/style.sass
+++ b/css/header-css/style.sass
@@ -98,7 +98,6 @@
 	height: 100%
 	background-size: cover
 	background-position: left
-	// background-image: url("../../img/svg/square-hole.svg")
 .hero__layer-outer
 	overflow: hidden
 	transition: all .7s ease-in-out
@@ -121,9 +120,9 @@
 /* RWD ****************************/
 
 @media only screen and (max-width: 1024px)
-	.hero__layer-outer,
-	.hero__layer-inner
-		background-position: -110px
+	// .hero__layer-outer,
+	// .hero__layer-inner
+	// 	background-position: -110px
 
 @media only screen and (max-width: 1024px) and (max-height: 600px)
 	.hero__layer-outer,
