--- a/css/skills-section-css/style.sass
+++ b/css/skills-section-css/style.sass
@@ -136,7 +136,8 @@
 /* RWD ************************************************/
 
 @media only screen and (max-width: 1024px)
-	background: url('../../img/hire-me.jpg') no-repeat -145px /cover
+	#contact
+		background: url('../../img/hire-me.jpg') no-repeat -145px /cover
 
 @media only screen and (max-width: 980px)
 	.bg-img__container
