--- a/css/header-css/style.sass
+++ b/css/header-css/style.sass
@@ -131,10 +131,10 @@
 
 @media only screen and (max-width: 980px)
 
-	.hero__layer-outer
-		.hero__intro-text
-			h1
-				line-height: 3rem
+	// .hero__layer-outer
+	// 	.hero__intro-text
+	// 		h1
+	// 			line-height: 3rem
 
 	#button-js
 		display: none
@@ -149,5 +149,9 @@
 @media only screen and (max-width: 600px)
 	.hero__intro-text
 		padding: 50px 20px
+	.hero__layer-outer
+		.hero__intro-text
+			h1
+				line-height: 3rem
 
 
