--- a/css/about-section-css/style.sass
+++ b/css/about-section-css/style.sass
@@ -88,6 +88,7 @@
 		margin-left: 0
 		padding: 100px 50px 0
 		text-align: center
+		box-shadow: none
 		.interactive-box__tile
 			.interactive-box__tile-overlay a
 				opacity: 1
@@ -98,7 +99,7 @@
 @media only screen and (max-width: 500px)
 	#experience
 		.about__interactive-box
-			min-height: 100%//787px
+			min-height: 100%
 	.interactive-box__inner-top
 		flex-direction: column
 		.interactive-box__tile
