--- a/css/header-css/style.css
+++ b/css/header-css/style.css
@@ -137,6 +137,14 @@
   .hamburger__container {
     opacity: 1; } }
 @media only screen and (max-width: 600px) {
+  .hero__menu-container .hero__menu-list {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    pading: 25px; }
+    .hero__menu-container .hero__menu-list .hero__menu-items {
+      text-align: right; }
+
   .hero__intro-text {
     padding: 50px 20px; }
 
