--- a/css/header-css/style.sass
+++ b/css/header-css/style.sass
@@ -147,6 +147,14 @@
 		opacity: 1
 
 @media only screen and (max-width: 600px)
+	.hero__menu-container
+		.hero__menu-list
+			display: flex
+			justify-content: space-between
+			width: 100%
+			pading: 25px
+			.hero__menu-items
+				text-align: right
 	.hero__intro-text
 		padding: 50px 20px
 	.hero__layer-outer
