--- a/css/header-css/style.css
+++ b/css/header-css/style.css
@@ -137,18 +137,18 @@
   .hamburger__container {
     opacity: 1; } }
 @media only screen and (max-width: 600px) {
+  .hero__intro-text {
+    padding: 50px 20px; }
+
+  .hero__layer-outer .hero__intro-text h1 {
+    line-height: 3rem; } }
+@media only screen and (max-height: 300px) {
   .hero__menu-container .hero__menu-list {
     display: flex;
     justify-content: space-between;
     width: 100%;
     pading: 25px; }
     .hero__menu-container .hero__menu-list .hero__menu-items {
-      text-align: right; }
-
-  .hero__intro-text {
-    padding: 50px 20px; }
-
-  .hero__layer-outer .hero__intro-text h1 {
-    line-height: 3rem; } }
+      text-align: right; } }
 
 /*# sourceMappingURL=style.css.map */
