--- a/css/header-css/style.css
+++ b/css/header-css/style.css
@@ -142,12 +142,12 @@
 
   .hero__layer-outer .hero__intro-text h1 {
     line-height: 3rem; } }
-@media only screen and (max-height: 300px) {
+@media only screen and (max-height: 350px) {
   .hero__menu-container .hero__menu-list {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    pading: 25px; }
+    padding: 25px; }
     .hero__menu-container .hero__menu-list .hero__menu-items {
       text-align: right; } }
 
