--- a/css/header-css/style.sass
+++ b/css/header-css/style.sass
@@ -154,13 +154,13 @@
 			h1
 				line-height: 3rem
 
-@media only screen and (max-height: 300px)
+@media only screen and (max-height: 350px)
 	.hero__menu-container
 		.hero__menu-list
 			display: flex
 			justify-content: space-between
 			width: 100%
-			pading: 25px
+			padding: 25px
 			.hero__menu-items
 				text-align: right
 
