--- a/css/swiper-css/style.css
+++ b/css/swiper-css/style.css
@@ -26,6 +26,10 @@
 .swiper-button-next {
     right: -35px!important;
 }
+.swiper-button-next,
+.swiper-button-prev {
+    margin-top: 0;
+}
 .swiper-button-prev {
     background-image: url('../../img/svg/arrow-left.svg')!important;
 }
