--- a/css/swiper-css/style.css
+++ b/css/swiper-css/style.css
@@ -28,7 +28,7 @@
 }
 .swiper-button-next,
 .swiper-button-prev {
-    margin-top: 0;
+    margin-top: 0!important;
 }
 .swiper-button-prev {
     background-image: url('../../img/svg/arrow-left.svg')!important;
