--- a/css/swiper-css/style.css
+++ b/css/swiper-css/style.css
@@ -8,14 +8,22 @@
 }
 .swiper-pagination-bullet-active {
     height: 6px!important;
-    transform: translateY(12%);
-	opacity: 1!important;
+    -webkit-transform: translateY(12%);
+        -ms-transform: translateY(12%);
+            transform: translateY(12%);
+    opacity: 1!important;
     background: #fff!important;
 }
 .swiper-pagination {
-    display:inline-block;
-    min-height: 18px;
-	bottom: -40px
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    bottom: -40px
 }
 .swiper-pagination-clickable .swiper-pagination-bullet {
     margin: 2px;
