--- a/css/about-section-css/style.sass
+++ b/css/about-section-css/style.sass
@@ -79,6 +79,9 @@
 
 /***************** RWD *******************/
 @media only screen and (max-width: 980px)
+	#experience
+		.about__interactive-box
+			box-shadow: none
 	.about__container
 		flex-direction: column
 	.about__txt-inner
@@ -88,7 +91,6 @@
 		margin-left: 0
 		padding: 100px 50px 0
 		text-align: center
-		box-shadow: none
 		.interactive-box__tile
 			.interactive-box__tile-overlay a
 				opacity: 1
