--- a/css/header-css/style.sass
+++ b/css/header-css/style.sass
@@ -29,6 +29,10 @@
 	margin-bottom: 0
 	&:hover
 		cursor: pointer
+		svg
+			transform: rotate(180deg)
+	svg
+		transition: .3s
 
 #myVideo
 	position: absolute
