--- a/css/partials-css/style.sass
+++ b/css/partials-css/style.sass
@@ -3,6 +3,7 @@ $secondary-overlay-color: rgba(23, 77, 150, 0.8)
 $decorative-color: #1d4996
 $hero-menu-continer-color: rgba(0, 32, 105, 0.95)
 $bg-font-color: #fff
+$color-decoration: #9edceb
 
 $heading-font: 'Poppins', sans-serif
 $content-font: 'Open Sans', sans-serif
