--- a/css/js-classes/style.css
+++ b/css/js-classes/style.css
@@ -1,27 +1,39 @@
 .hamburger__bar {
-  transition: 0.5s; }
+  transition: 0.5s;
+}
 
 .hamburger__top--toggle {
-  transform: translate(0, 10px) rotate(45deg); }
+  transform: translate(0, 10px) rotate(45deg);
+}
 
 .hamburger__middle--toggle {
   transform: translate(15px);
-  opacity: 0; }
+  opacity: 0;
+}
 
 .hamburger__bottom--toggle {
-  transform: translate(0, -10px) rotate(-45deg); }
+  transform: translate(0, -10px) rotate(-45deg);
+}
 
 .visible {
-  opacity: 1; }
+  opacity: 1;
+}
+
+.show {
+  display: block !important;
+}
 
 .bg-transparent {
-  background: transparent !important; }
+  background: transparent !important;
+}
 
 .decrease-width {
-  width: 50%; }
+  width: 50%;
+}
 
 .hero__menu-container--show {
-  right: 0; }
+  right: 0;
+}
 
 .sticky {
   position: fixed;
@@ -36,10 +48,12 @@
   background: -o-linear-gradient(left, #353795 0%, #144F96 100%);
   background: -ms-linear-gradient(left, #353795 0%, #144F96 100%);
   background: linear-gradient(to right, #353795 0%, #144F96 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=0 ); }
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=0 );
+}
 
 .rotate {
-  transform: rotate(360deg); }
+  transform: rotate(360deg);
+}
 
 .hero-bg {
   position: absolute;
@@ -50,6 +64,7 @@
   width: 100%;
   height: 100vh;
   z-index: -1;
-  background: url("../../img/cracow-hero.jpg") center/cover; }
+  background: url("../../img/cracow-hero.jpg") center/cover;
+}
 
 /*# sourceMappingURL=style.css.map */
