--- a/css/skills-section-css/style.css
+++ b/css/skills-section-css/style.css
@@ -1,84 +1,95 @@
 #skills {
   min-height: auto;
-  padding: 100px 50px 135px; }
-  #skills .section__heading {
-    left: 50%;
-    transform: translateX(-50%); }
-    #skills .section__heading h2 {
-      color: #1d4996; }
+  padding: 100px 50px 135px;
+}
+#skills .section__heading {
+  left: 50%;
+  transform: translateX(-50%);
+}
+#skills .section__heading h2 {
+  color: #1d4996;
+}
 
 .bg-img__container {
-  position: relative; }
-  .bg-img__container::before {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 45%;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: #353795;
-    background: -moz-linear-gradient(left, #353795 0%, #144F96 100%);
-    background: -webkit-linear-gradient(left, #353795 0%, #144F96 100%);
-    background: -o-linear-gradient(left, #353795 0%, #144F96 100%);
-    background: -ms-linear-gradient(left, #353795 0%, #144F96 100%);
-    background: linear-gradient(to right, #353795 0%, #144F96 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=0 ); }
-  .bg-img__container .bg-img__container-inner {
-    position: relative;
-    z-index: 9;
-    width: 30%; }
+  position: relative;
+}
+.bg-img__container::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 45%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #353795;
+  background: -moz-linear-gradient(left, #353795 0%, #144F96 100%);
+  background: -webkit-linear-gradient(left, #353795 0%, #144F96 100%);
+  background: -o-linear-gradient(left, #353795 0%, #144F96 100%);
+  background: -ms-linear-gradient(left, #353795 0%, #144F96 100%);
+  background: linear-gradient(to right, #353795 0%, #144F96 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=0 );
+}
+.bg-img__container .bg-img__container-inner {
+  position: relative;
+  z-index: 9;
+  width: 30%;
+}
 
 #contact {
   min-height: auto;
-  background: url("../../img/hire-me.jpg") no-repeat 115px/cover; }
-  #contact::before {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(52, 55, 149, 0.65); }
-  #contact::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 50%;
-    height: 100%;
-    background: #353795;
-    background: -moz-linear-gradient(left, #353795 0%, #144F96 100%);
-    background: -webkit-linear-gradient(left, #353795 0%, #144F96 100%);
-    background: -o-linear-gradient(left, #353795 0%, #144F96 100%);
-    background: -ms-linear-gradient(left, #353795 0%, #144F96 100%);
-    background: linear-gradient(to right, #353795 0%, #144F96 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=0 ); }
-  #contact .bg-img__container-avatar {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 9;
-    width: 300px;
-    height: 300px;
-    background: #353795;
-    background: -moz-linear-gradient(left, #353795 0%, #144F96 100%);
-    background: -webkit-linear-gradient(left, #353795 0%, #144F96 100%);
-    background: -o-linear-gradient(left, #353795 0%, #144F96 100%);
-    background: -ms-linear-gradient(left, #353795 0%, #144F96 100%);
-    background: linear-gradient(to right, #353795 0%, #144F96 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=0 );
-    -webkit-box-shadow: 0px 10px 27px -5px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 10px 27px -5px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 10px 27px -5px rgba(0, 0, 0, 0.75); }
-    #contact .bg-img__container-avatar img {
-      overflow: hidden;
-      width: 100%;
-      height: 100%;
-      border: 5px solid #fff; }
+  background: url("../../img/hire-me.jpg") no-repeat 115px/cover;
+}
+#contact::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(52, 55, 149, 0.65);
+}
+#contact::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  background: #353795;
+  background: -moz-linear-gradient(left, #353795 0%, #144F96 100%);
+  background: -webkit-linear-gradient(left, #353795 0%, #144F96 100%);
+  background: -o-linear-gradient(left, #353795 0%, #144F96 100%);
+  background: -ms-linear-gradient(left, #353795 0%, #144F96 100%);
+  background: linear-gradient(to right, #353795 0%, #144F96 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=0 );
+}
+#contact .bg-img__container-avatar {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9;
+  width: 300px;
+  height: 300px;
+  background: #353795;
+  background: -moz-linear-gradient(left, #353795 0%, #144F96 100%);
+  background: -webkit-linear-gradient(left, #353795 0%, #144F96 100%);
+  background: -o-linear-gradient(left, #353795 0%, #144F96 100%);
+  background: -ms-linear-gradient(left, #353795 0%, #144F96 100%);
+  background: linear-gradient(to right, #353795 0%, #144F96 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=0 );
+  -webkit-box-shadow: 0px 10px 27px -5px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 10px 27px -5px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 10px 27px -5px rgba(0, 0, 0, 0.75);
+}
+#contact .bg-img__container-avatar img {
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  border: 5px solid #fff;
+}
 
 .skill {
   background: #353795;
@@ -95,93 +106,116 @@
   overflow: hidden;
   position: relative;
   text-align: left;
-  -webkit-box-shadow: 0px 10px 40px -10px #1e2542;
-  -moz-box-shadow: 0px 10px 40px -10px #1e2542;
-  box-shadow: 0px 10px 40px -10px #1e2542; }
-  .skill * {
-    -webkit-transition: all 0.25s ease;
-    transition: all 0.25s ease; }
-  .skill figcaption {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 1; }
-  .skill h3 {
-    -webkit-transform: translateY(-100%);
-    transform: translateY(-100%);
-    top: 0;
-    font-weight: 800;
-    letter-spacing: -0.4px;
-    margin: 0;
-    padding: 10px 20px;
-    position: absolute;
-    width: 100%; }
-  .skill p {
-    position: absolute;
-    width: 100%;
-    bottom: 25px;
-    padding: 0px 20px;
-    opacity: 0;
-    text-align: right;
-    -webkit-transition-delay: 0.15s;
-    transition-delay: 0.15s; }
-  .skill .hover {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    align-items: center;
-    background-color: rgba(23, 77, 150, 0.8);
-    display: flex;
-    font-size: 65px;
-    justify-content: center;
-    opacity: 0; }
-  .skill:hover .hover,
-  .skill:hover p {
-    opacity: 1; }
-  .skill:hover h3 {
-    -webkit-transform: translateY(0%);
-    transform: translateY(0%); }
-  .skill:hover img {
-    transform: scale(2.5); }
+  -webkit-box-shadow: 0px 10px 20px -10px #1e2542;
+  -moz-box-shadow: 0px 10px 20px -10px #1e2542;
+  box-shadow: 0px 10px 20px -10px #1e2542;
+}
+.skill * {
+  -webkit-transition: all 0.25s ease;
+  transition: all 0.25s ease;
+}
+.skill figcaption {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+}
+.skill h3 {
+  -webkit-transform: translateY(-100%);
+  transform: translateY(-100%);
+  top: 0;
+  font-weight: 800;
+  letter-spacing: -0.4px;
+  margin: 0;
+  padding: 10px 20px;
+  position: absolute;
+  width: 100%;
+}
+.skill p {
+  position: absolute;
+  width: 100%;
+  bottom: 25px;
+  padding: 0px 20px;
+  opacity: 0;
+  text-align: right;
+  -webkit-transition-delay: 0.15s;
+  transition-delay: 0.15s;
+}
+.skill .hover {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  align-items: center;
+  background-color: rgba(23, 77, 150, 0.8);
+  display: flex;
+  font-size: 65px;
+  justify-content: center;
+  opacity: 0;
+}
+.skill:hover .hover,
+.skill:hover p {
+  opacity: 1;
+}
+.skill:hover h3 {
+  -webkit-transform: translateY(0%);
+  transform: translateY(0%);
+}
+.skill:hover img {
+  transform: scale(2.5);
+}
 
 /* RWD *********************************************** */
 @media only screen and (max-width: 1024px) {
   #contact {
-    background: url("../../img/hire-me.jpg") no-repeat -145px/cover; } }
+    background: url("../../img/hire-me.jpg") no-repeat -145px/cover;
+  }
+}
 @media only screen and (max-width: 980px) {
   .bg-img__container .bg-img__container-inner {
-    width: 100%; }
+    width: 100%;
+  }
 
   #contact::after {
-    width: 100%; }
+    width: 100%;
+  }
   #contact .bg-img__container-avatar {
     order: 3;
     position: relative;
     top: 25px;
     left: 0;
-    transform: translate(0); }
+    transform: translate(0);
+  }
 
   .skill .hover,
   .skill p {
-    opacity: 1; }
+    opacity: 1;
+  }
   .skill h3 {
     -webkit-transform: translateY(0%);
-    transform: translateY(0%); }
+    transform: translateY(0%);
+  }
   .skill img {
-    transform: scale(2.5); } }
+    transform: scale(2.5);
+  }
+}
 @media only screen and (max-width: 600px) {
   #skills {
-    padding: 100px 50px; } }
+    padding: 100px 50px;
+  }
+}
 @media only screen and (max-width: 500px) {
   .skill {
-    min-width: 225px; }
+    min-width: 225px;
+  }
 
   #contact .bg-img__container-avatar {
     width: 200px;
-    height: 200px; } }
+    height: 200px;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
